adding fractions-28-01
1.c:3:2: error: expected specifier-qualifier-list before ‘fraction’
  fraction-> x;
  ^~~~~~~~
1.c: In function ‘input’:
1.c:9:16: error: ‘x’ undeclared (first use in this function)
  scanf("%f%f",&x,&y);
                ^
1.c:9:16: note: each undeclared identifier is reported only once for each function it appears in
1.c:9:19: error: ‘y’ undeclared (first use in this function)
  scanf("%f%f",&x,&y);
                   ^
1.c: At top level:
1.c:11:6: error: conflicting types for ‘input’
 void input()
      ^~~~~
1.c:6:17: note: previous definition of ‘input’ was here
 struct fraction input()
                 ^~~~~
1.c: In function ‘input’:
1.c:13:2: error: unknown type name ‘fraction’; use ‘struct’ keyword to refer to the type
  fraction z;
  ^~~~~~~~
  struct 
1.c:14:4: error: ‘x’ undeclared (first use in this function)
  z=x+y;
    ^
1.c:14:6: error: ‘y’ undeclared (first use in this function)
  z=x+y;
      ^
1.c:15:9: warning: ‘return’ with a value, in function returning void
  return z;
         ^
1.c:11:6: note: declared here
 void input()
      ^~~~~
1.c: At top level:
1.c:17:13: error: unknown type name ‘fraction’
 void output(fraction z)
             ^~~~~~~~
1.c:21:13: error: expected identifier or ‘(’ before ‘)’ token
 struct main()






#include <stdio.h>
struct fraction{
       int numerator;
       int denominator;
};
struct input_fraction(fraction f,fraction g)
{
       printf("enter numertor1:");
       scanf("%d",f->numerator);
       printf("enter denominator1:");
       scanf("%d",f->denominator);
       printf("enter numerator2");
       scanf("%d",g->numertor);
       printf("enter denominator2:");
       scanf("%d",g->denominator);
}
struct add_fraction(struct fraction*h)
{
       h=f+g;
       return h;
}
void output(struct fraction h)
{
        printf("%d/%d is the sum ",h.numerator,h.denominator);
}
struct main()
{
        struct f,g,h;
        input(f,g);
        h=add(f,g);
        output(f,g,h);
}



















#include <stdio.h>
struct fraction{
       int a;
       int b;
       int c;
       int d;
};
struct add(struct fraction*f,fraction*g)
       f->numerator a;
       f->denominator b;
       g->numerator c;
       g->denominator d;
       printf("%d,%d,%d,%d",f->a,f->b,g->c,g->d);

}
struct add(fraction*h)
{
       f->h=f->f+f->g;
}
void output(fraction*h)
{
        printf("%d is the sum of %d,%d,%d,%d",h,a,b,c,d);
}
int main()
{
        int u,x,y,z,w;
        input(&u,&x,&y,&z);
        w=add(u,x,y,z);
        output(w);
}















#incilude <stdio.h>
struct farction
{
        int numerator;
        int denominator;
};
void input_farction(struct fraction *f,struct fraction *g)
{
        printf("enter numerator 1:");
        scanf("%d",&f->numerator);
        printf("enter denominator 1:");
        scanf("%d",&f->denominator);
        printf("enter numerator 2:");
        scanf("%d",&g->numerator);
        printf("enter denominator 2:");
        scanf("%d",&g->denominator);
}
int sum(struct fraction f,struct fraction g)
{
        int h,g,a;
        int h=(f.numerator*g.denominator)+(g.numerator*f.denominator);
        int g=(f.denominator*g.denominator);
        int a=h/g;
        return a;
}
void output(int a)
{
        printf("%d is the sum",a);
}
int main()
{
        int a,f,g;
        input();
        a=sum(&f,&g);
        output(a);
}











#include <stdio.h>
struct farction
{
        int numerator;
        int denominator;
};
int input_farction(struct fraction *f,struct fraction *g)
{
        printf("enter numerator 1:");
        scanf("%d",f->numerator);
        printf("enter denominator 1:");
        scanf("%d",f->denominator);
        printf("enter numerator 2:");
        scanf("%d",g->numerator);
        printf("enter denominator 2:");
        scanf("%d",g->denominator);
}

